force-app/main/default/objects/Settings__c/fields/ThemeAdditColor1__c.field-meta.xml
<CustomField>
    <fullName>ThemeAdditColor1__c</fullName>
    <label>Theme Addit Color 1</label>
    <length>7</length>
    <type>Text</type>
</CustomField>