force-app/main/default/objects/Settings__c/fields/ThemeAdditColor2__c.field-meta.xml
<CustomField>
    <fullName>ThemeAdditColor2__c</fullName>
    <label>Theme Addit Color 2</label>
    <length>7</length>
    <type>Text</type>
</CustomField>