force-app/main/default/objects/Settings__c/fields/ThemeAdditColor3__c.field-meta.xml
<CustomField>
    <fullName>ThemeAdditColor3__c</fullName>
    <label>Theme Addit Color 3</label>
    <length>7</length>
    <type>Text</type>
</CustomField>