force-app/main/default/objects/Settings__c/fields/ThemeBlueColor__c.field-meta.xml
<CustomField>
    <fullName>ThemeBlueColor__c</fullName>
    <label>Theme Blue Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>