force-app/main/default/objects/Settings__c/fields/ThemeGradient__c.field-meta.xml
<CustomField>
    <fullName>ThemeGradient__c</fullName>
    <label>Theme Gradient</label>
    <length>250</length>
    <type>Text</type>
</CustomField>