force-app/main/default/objects/Settings__c/fields/ThemeGreyColor__c.field-meta.xml
<CustomField>
    <fullName>ThemeGreyColor__c</fullName>
    <label>Theme Grey Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>