force-app/main/default/objects/Settings__c/fields/ThemeLightColor__c.field-meta.xml
<CustomField>
    <fullName>ThemeLightColor__c</fullName>
    <label>Theme Light Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>