force-app/main/default/objects/Settings__c/fields/ThemeMainColor__c.field-meta.xml
<CustomField>
    <fullName>ThemeMainColor__c</fullName>
    <label>Theme Main Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>