force-app/main/default/objects/Settings__c/fields/ThemeOppositeColor__c.field-meta.xml
<CustomField>
    <fullName>ThemeOppositeColor__c</fullName>
    <label>Theme Opposite Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>