force-app/main/default/objects/Settings__c/fields/ThemeSecondColor__c.field-meta.xml
<CustomField>
    <fullName>ThemeSecondColor__c</fullName>
    <label>Theme Second Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>